/*
*  This file is part of aasdk library project.
*  Copyright (C) 2018 f1x.studio (Michal Szwaj)
*
*  aasdk is free software: you can redistribute it and/or modify
*  it under the terms of the GNU General Public License as published by
*  the Free Software Foundation; either version 3 of the License, or
*  (at your option) any later version.

*  aasdk is distributed in the hope that it will be useful,
*  but WITHOUT ANY WARRANTY; without even the implied warranty of
*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
*  GNU General Public License for more details.
*
*  You should have received a copy of the GNU General Public License
*  along with aasdk. If not, see <http://www.gnu.org/licenses/>.
*/

syntax="proto2";

option optimize_for=SPEED;

import "SensorChannelData.proto";
import "AVChannelData.proto";
import "InputChannelData.proto";
import "AVInputChannelData.proto";
import "BluetoothChannelData.proto";
import "NavigationChannelData.proto";
import "VendorExtensionChannelData.proto";
import "MediaInfoChannelData.proto";
import "WifiChannelData.proto";

package aasdk.proto.data;

message ChannelDescriptor
{
    required uint32 channel_id = 1;
    optional SensorChannel sensor_channel = 2;
    optional AVChannel av_channel = 3;
    optional InputChannel input_channel = 4;
    optional AVInputChannel av_input_channel = 5;
    optional BluetoothChannel bluetooth_channel = 6;
    optional NavigationChannel navigation_channel = 8;
    optional MediaInfoChannel media_infoChannel = 9;
    optional VendorExtensionChannel vendor_extension_channel = 12;
    optional WifiChannel wifi_channel=16;
}
